--- a/src/qt/forms/sendcoinsdialog.ui
+++ b/src/qt/forms/sendcoinsdialog.ui
@@ -545,7 +545,7 @@
            <number>12</number>
           </property>
           <property name="sizeConstraint">
-           <enum>QLayout::SetDefauPCConstraint</enum>
+           <enum>QLayout::SetDefaultConstraint</enum>
           </property>
           <property name="topMargin">
            <number>5</number>
